Removed unnecessary CustomerOrderItem classes. #62